--- a/app/views/my_children/new.html.erb
+++ b/app/views/my_children/new.html.erb
@@ -2,15 +2,11 @@
 
   <div class="new-child-well ">
   
-    <%= simple_form_for(@child, :html => {:class => "form-horizontal"}) do |f| %>
+    <%= simple_form_for(@my_child, :url => { :action => "create" }, :html => {:class => "form-horizontal"}) do |f| %>
       <%= f.input :first_name, :label => 'First Name' %>
       <%= f.input :birth_date, :as => :date, :order => [:month, :day, :year], :start_year => 2000, :end_year => Time.now.year, :input_html => {:class => "input-small"}, :label => "Birth Date" %>
       <%= f.input :gender, :as => :select, :collection => ['Male', 'Female'] %>
-      <%= f.association :relation_types, :as => :collection_select, :label => "Your Relation To Child" %>
-        
-        <%= f.simple_fields_for :invitations do |ff| %>  
-          <%= ff.input :recipient_email, :label => 'Parent Email' %>
-        <% end %>
+      <%= f.association :relation_types, :as => :select, :collection => RelationType.where(:id => [1, 2]), :label => "Your Relation To Child" %>
       <div class="pull-right">  
       <%= f.button :submit, :class => "primary" %>
       </div>
