--- a/app/views/children/_unfollow.html.erb
+++ b/app/views/children/_unfollow.html.erb
@@ -1,5 +1,4 @@
-<%= form_for(current_user.relationships.find_by_user_id(@user),
-             html: { method: :delete },
-             remote: true) do |f| %>
-  <%= f.submit "Unfollow", class: "btn-large" %>
+<%= form_for(current_user.relationships.find_by_child_id(child),
+             :html => {:method => :delete }, :remote => true) do |f| %>
+  <%= f.submit "Unfollow", class: "btn-mini btn-warning btn-spacing" %>
 <% end %>
