--- a/app/views/children/_follow.html.erb
+++ b/app/views/children/_follow.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(current_user.relationships.build) do |f| %>
     <%= f.hidden_field :child_id, :value => child.id %>
-  <%= f.submit "Follow", class: "btn-primary" %>
+  <%= f.submit "Follow", class: "btn-mini btn-success btn-spacing" %>
 <% end %>
