--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -93,10 +93,11 @@
             Location: <%= current_user.address_city %>, <%= current_user.address_state %>
           </div>  
         
-          <div class="btn-group square space-break">
-            <button class="btn"><span style="font-size: 25px; font-weight: bold; color: #53868B"><%= link_to @user.following.count, following_path %></span></br><span style="color: #999999">Following</span></button>
-            <button class="btn"><span style="font-size: 25px; font-weight: bold; color: #53868B"><%= @user.followers.count %></span></br><span style="color: #999999">Followers</span></button>
-            <button class="btn"><span class="pending_link"><%= link_to @user.pending.count, pending_path %></span></br><span style="color: #999999">Pending</span></button>
+          <div class="btn-group space-break">
+            <button class="btn btn-grp-small-size"><span style="font-size: 22px; font-weight: bold; color: #53868B"><%= link_to @user.followings.count, following_path %></span></br><span style="color: #999999">Following</span></button>
+            <button class="btn btn-grp-small-size"><span style="font-size: 22px; font-weight: bold; color: #53868B"><%= link_to @user.my_kids_followers.count, followers_path %></span></br><span style="color: #999999">Followers</span></button>
+            <button class="btn btn-grp-small-size"><span style="font-size: 22px; font-weight: bold; color: #53868B"><%= link_to @user.pending.count, pending_path %></span></br><span style="color: #999999">Pending</span></button>
+            <button class="btn btn-grp-small-size"><span class="pending_link"><%= link_to @user.my_kids_requests.count, requests_path %></span></br><span style="color: #999999">Requests</span></button>
           </div>
 
         </div>
