--- a/app/views/users/pending.html.erb
+++ b/app/views/users/pending.html.erb
@@ -8,7 +8,8 @@
   <ul class="child-list">
     <% @pending.each do |r| %>
     <li class="children-following child-list block">
-      <%= render(:partial => "relationship", :locals => {:r => r}) %>    </li>  
+      <%= r.child.first_name %>    
+    </li>  
     <% end %>
   </ul>
 </div>
