--- a/app/views/children/search_child.html.erb
+++ b/app/views/children/search_child.html.erb
@@ -40,6 +40,9 @@
                           <% if current_user.following?(child) %>
                             <%= link_to child.first_name, relationship_path(rel)%>
                             <%= render(:partial => 'unfollow', :locals => {:child => child})%>
+                          <% elsif current_user.requested?(child) %>
+                            <%= child.first_name %></br>
+                            Requested
                           <% else %>
                             <%= child.first_name %></br>
                             <%= render(:partial => 'follow', :locals => {:child => child})%>
