--- a/app/views/users/_followers_request.html.erb
+++ b/app/views/users/_followers_request.html.erb
@@ -1,2 +1,6 @@
-<strong><%= link_to r.first_name, user_path(r) %></strong><br>
-<span style="color: #999999; font-size: 12px">Location: <%= r.address_city  %>, <%= r.address_state %></span><br>
+<strong><%= r.user.first_name %></strong><br>
+
+<span style="color: #999999; font-size: 12px">Child: <%= r.child.first_name  %></span><br>
+<span class="btn btn-mini btn-success btn-spacing white-link"><%= link_to "Accept", my_kids_relationship_path(r),  :method => :put %></span>  
+<span class="btn btn-mini btn-warning btn-spacing white-link"><%= link_to "Ignore", my_kids_relationship_path(r),  :confirm => 'Are you sure?', :method => :delete %></span>    
+
