--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -2,17 +2,14 @@
 
   <div class="new-child-well ">
   
-    <%= simple_form_for(@child, :html => {:class => "form-horizontal"}) do |f| %>
+    <%= simple_form_for(@child, :html => {:multipart => true}, :html => {:class => "form-horizontal"}) do |f| %>
       <%= render(:partial => 'form', :locals => {:f => f}) %>
-        <%= f.simple_fields_for :invitations do |ff| %>  
-          <%= ff.input :recipient_email, :label => 'Parent Email' %>
-        <% end %>
+
       <div class="pull-right">  
       <%= f.button :submit, :class => "primary" %>
       </div>
     
-    <% end %>
-
+    <% end %>  
   
   </div>
   
