--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
   <div class="row">
     <ul class="child-list">
       <% @relationships_by_birth_date.each do |r| %>    
-        <% if (0..31).include?(r.child.birthday_days) %>      
+        <% if (0..31).include?(r.child.birthday_days)%>      
         <li class="children-following child-list block">
           <strong><%= link_to r.child.first_name, relationship_path(r) %></strong><br>
           <span style="color: #999999; font-size: 12px">Relations:<%= r.relation_type.name if r.relation_type %></span><br>
@@ -34,10 +34,10 @@
 
   <div class="row">
     <ul class="child-list">
-      <% @user.my_kids.each do |r| %>
+      <% @relationship_my_kids.each do |r| %>
       <li class="children-following child-list block">
-        <strong><%= link_to r.first_name, relationship_path(r) %></strong><br>
-        <span style="color: #999999; font-size: 12px">Birthday: <%= r.birth_date.strftime("%b. %d")%></span><br>
+        <strong><%= link_to r.child.first_name, relationship_path(r) %></strong><br>
+        <span style="color: #999999; font-size: 12px">Birthday: <%= r.child.birth_date.strftime("%b. %d")%></span><br>
       </li>  
       <% end %>
     </ul>
