--- a/app/views/relationships/show.html.erb
+++ b/app/views/relationships/show.html.erb
@@ -25,7 +25,7 @@ $(':checkbox').change(function(e){
       <div class="preference-well">
         <span style="font-size: 16px; color: #FF6F6A">Gift Options <%= @child.first_name %></span>
         <%= simple_form_for(@relationship, :html => {:class => "form-inline"}) do |f| %>
-          <%= f.association :relation_type, :as => :collection_select, :label => "Relation To Child"%>
+          <%= f.association :relation_type, :as => :collection_select, :input_html => {:class => "input-small"}, :label => "Relation To Child"%>
           <%= f.association :gift_categories, :as => :check_boxes, :item_wrapper_class => "span2" %>
           <%= f.association :gift_price_ranges, :as => :check_boxes, :item_wrapper_class => "span2" %>
           <div class="pull-left"><%= f.button :submit, :class => "primary" %></div>
@@ -37,11 +37,19 @@ $(':checkbox').change(function(e){
 
     <div class="span9">
 
-      <span style="font-size: 16px; color: #FF6F6A"><%= link_to "Photos of  #{@child.first_name}", child_photos_path(@child) %></span>
+      <span style="font-size: 16px; color: #FF6F6A"><%= link_to "Photos of  #{@child.first_name}", child_child_images_path(@child) %></span>
       <hr/>
 
-      <%= render :partial => 'shared/child_photos'%><br><br>  
-
+      <div>
+        <% if @child_images %>
+        <% @five_photos.each do |f| %>
+          <%= link_to image_tag(f.image_url(:thumb)), "#" %>
+        <% end %>
+        <% else %>
+        <% end %>
+        </div>
+      
+      <br>
 
       <span style="font-size: 16px; color: #FF6F6A">Recommended Gifts for <%= @child.first_name %></span>
       <hr/>
