--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -124,7 +124,14 @@ select {
   padding-top: 10px;
   }
 
-
+.alert-danger, .alert-error, .alert-block, .alert-info, .alert-success {
+  width: 900px;
+  height: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px;
+  text-align: center;
+  }
 
 /*==================================================
  * TOPBAR
