--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,6 +77,8 @@
         </div>
       </div>
     </div>
+    
+    <%= render partial: "shared/flash_messages", flash: flash %> <br>
 
     <%= yield %>
     
