--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,7 +1,7 @@
 
 <% flash.each do |type, message| %>
 <div data-alert="alert", class=" alert-message <%= twitterized_type(type) %> fade in">
-  <a class="close" href="#"></a>
-  <%= content_tag :p, message %>
+  <button class="close" data-dismiss="alert">×</button>
+  <%= message %>
   </div>
 <% end %>
