--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
     
     
 <div class="span9">
-<span style="font-family: MountainsofChristmas; font-size: 18px; color: #FF6F6A">Upcoming Birthdays</span>
+<span class="relationship-header">Upcoming Birthdays</span>
 <hr/>
 
   <div class="row">
@@ -27,7 +27,7 @@
 </br>
 </br>
 
-<span style="font-family: MountainsofChristmas; font-size: 18px; color: #FF6F6A">My Kids</span>
+<span class="relationship-header">My Kids</span>
 <%= link_to "Add My Child", new_my_child_path %>
 <hr/>
 
@@ -47,7 +47,7 @@
 </br>
 </br>
 
-<span style="font-family: MountainsofChristmas; font-size: 18px; color: #FF6F6A">Children I am Following</span>
+<span class="relationship-header">Children I am Following</span>
 <%= link_to "Add A New Child", search_child_path %>
 <hr/>
 
