--- a/app/views/relationships/_purchased_gifts.html.erb
+++ b/app/views/relationships/_purchased_gifts.html.erb
@@ -1,10 +1,11 @@
-<div class="row">
+<h3>purchased gifts</h3>
+<div class="row" id="approved_gifts">
   <ul class="no-margin-or-bullet">
     <% if !@gift_purchased.empty? %>   
-      <% @gift_purchased.each do |gift| %>
+      <% @gift_purchased.each do |gp| %>
         <li class="related-gifts">
-          <%= link_to image_tag(gift.gift_images.first.image_url(:sm_thumb_pic)), gift_path(gift) %><br>
-          <%= link_to gift.name, gift_path(gift) %>
+          <%= link_to image_tag(gp.gift.gift_images.first.image_url(:sm_thumb_pic)), gift_path(gp.gift) if gp.gift %><br>
+          <%= link_to gp.gift.name, gift_path(gp.gift) %>
         </li>
       <% end %>
     <% else %>
