--- a/app/views/relationships/show.html.erb
+++ b/app/views/relationships/show.html.erb
@@ -24,7 +24,7 @@ $(':checkbox').change(function(e){
       
       <div class="preference-well">
         <span class="relationship-header">Gift Options <%= @child.first_name %></span>
-        <%= simple_form_for(@relationship, :html => {:class => "form-inline"}) do |f| %>
+        <%= simple_form_for @relationship, :html => {:class => "form-inline"} do |f| %>
           <%= f.association :relation_type, :as => :collection_select, :input_html => {:class => "input-small"}, :label => "Relation To Child"%>
           <%= f.association :gift_categories, :as => :check_boxes, :item_wrapper_class => "span2" %>
           <%= f.association :gift_price_ranges, :as => :check_boxes, :item_wrapper_class => "span2" %>
@@ -61,6 +61,9 @@ $(':checkbox').change(function(e){
       <span class="relationship-header">Gifts Already Purchased for <%= @child.first_name %></span>
       
         <%= render :partial => 'shared/purchased_gift_search'%>      
+
+        
+          <%= render :partial => 'approve_purchased_gifts'%>  
       
         <%= render :partial => 'purchased_gifts'%>  
       
