--- a/app/views/my_children/new.html.erb
+++ b/app/views/my_children/new.html.erb
@@ -7,6 +7,12 @@
       <%= f.input :birth_date, :as => :date, :order => [:month, :day, :year], :start_year => 2000, :end_year => Time.now.year, :input_html => {:class => "input-small"}, :label => "Birth Date" %>
       <%= f.input :gender, :as => :select, :collection => ['Male', 'Female'] %>
       <%= f.association :relation_types, :as => :check_boxes, :collection => RelationType.where(:id => [1, 2]), :label => "Your Relation To Child" %>
+      <div id="other_parent">
+        <%= f.simple_fields_for :invitations do |ff| %>  
+          <%= ff.input :recipient_email, :label => 'Spouse Email' %>
+        <% end %>
+      </div>
+      
       <div class="pull-right">  
       <%= f.button :submit, :class => "primary" %>
       </div>
