--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,22 @@
 
   <div class="row">
     <ul class="child-list">
+      <% @find_my_kids.each do |r| %>
+      <li class="children-following child-list block">
+        <%= image_tag(r.child_images.first.image_url(:sm_thumb)) if r.child_images.first %>
+        <strong><%= link_to r.first_name, relationship_path(r) %></strong><br>
+        <span style="color: #999999; font-size: 12px">Birthday: <%= r.birth_date.strftime("%b. %d")%></span><br>
+        
+        <%= link_to "Not My Child", r.invitations.first, :method => :delete, :remote => "true", :class => "unfollow" %>
+      </li>  
+      <% end %>
+    </ul>
+
+
+
+
+
+    <ul class="child-list">
       <% @relationship_my_kids.each do |r| %>
       <li class="children-following child-list block">
         <%= render(:partial => 'child_list', :locals => {:r => r})%>
